--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "clsx": "^2.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.4.1",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
